# bencode_converter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  Dockerfile.template  devcontainer.json
.github/workflows/: build_and_test.yml  clang_format_review.yml  clang_tidy_review.yml
include/: bencode_parser.h
test/: CMakeLists.txt  bencode_concepts_test.cpp  bencode_parser_test.cpp  config.h.in
